# secret-global-backup

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
sgb/: __init__.py  cli.py  config.py  db.py  encryptor.py  engine.py  packager.py  remote.py  restore.py  scheduler.py  state.py
tests/: test_db.py  test_encryptor.py  test_engine.py  test_packager.py  test_restore.py
tests/fixtures/: generate.py
