[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-global-backup"
version = "1.0.0"
description = "Configurable auto-backup system with encryption, versioning, and GitHub remote push"
authors = [{name = "Nweke Nwafor"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "click>=8.0",
    "schedule>=1.2",
]

[project.scripts]
sgb = "sgb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
